[package]
name = "recipe_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command Line Argument Parsing
clap = { version = "3.0", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# HTML Parsing
scraper = "0.13.0"

# JSON Parsing
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }

# Check for .env file
dotenv = "0.15.0"
