[package]
name = "recipe_to_notion"
version = "0.1.1"
authors = ["Wesley Ireland"]
license = "MIT OR Apache-2.0"
description = "A CLI tool that reads recipe metadata from a URL and creates a recipe page in a Notion recipes database."
readme = "README.md"
homepage = "https://github.com/wesley-ireland/recipe_reader"
repository = "https://github.com/wesley-ireland/recipe_reader"
keywords = ["cli", "notion", "recipes"]
categories = ["command-line-utilities"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command Line Argument Parsing
clap = { version = "3.0", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# HTML Parsing
scraper = "0.13.0"

# JSON Parsing
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }

# Check for .env file
dotenv = "0.15.0"
